--- a/awse/templates/awse/global/js.html
+++ b/awse/templates/awse/global/js.html
@@ -12,5 +12,5 @@
         footer_load__ = '{% url "footer_load" %}', token_re__ = "{{ token_re }}",
         whois_api_url = "{% url 'whois_data' %}";
 </script>
-<script defer src="{% static 'awse/js/core.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="{% static 'awse/js/core.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 {% endspaceless %}
