--- a/awse/templates/awse/home/additional/quotes.html
+++ b/awse/templates/awse/home/additional/quotes.html
@@ -1,9 +1,10 @@
 {% spaceless %}
 <label class="city">
-    {% with script_id=64|get_random_string block_=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
-    <aware-quote id="block_"></aware-quote>
-    <script id="{{ script_id }}">let x{{ el_ }}='{{ quote.q|encode_eng }}';let x{{ el_2 }}='{{ quote.a|encode_eng }}';$("#{{ block_ }}").html(`<i>„${x{{ el_ }}}“</i><br/><br/><b>${x{{ el_2 }}}</b>`);$("#{{ script_id }}").remove()</script>
-    {% endwith %}
+    <aware-quote id="block_">
+        <i>„{{ quote.q }}“</i>
+        <br/><br/>
+        <b>{{ quote.a }}</b>
+    </aware-quote>
 </label>
 <br/>
 {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
