--- a/awse/templates/awse/load_blocks/weather.html
+++ b/awse/templates/awse/load_blocks/weather.html
@@ -10,10 +10,11 @@
                         <h2 id="{{ block_ }}"></h2>
                         <script id="{{ script_id }}">let x{{ el_ }}='{{ vars.weather.now_weather.name|encode_eng }}';let x{{ el_2 }}='{% now "l, j E" %}';$("#{{ block_ }}").html(`${UpBDecode(x{{ el_ }})}<br/><small style="color:inherit;font-size:50%">${x{{ el_2 }}}</small>`);$("#{{ script_id }}").remove()</script>
                         {% endwith %}
-                        <p class="h3">
-                            {{ vars.weather.now_weather.weather.0.icon|get_weather_ico|safe }}
-                            &nbsp;{{ vars.weather.now_weather.weather.0.description|capfirst }}
-                        </p>
+
+                        {% with script_id=64|get_random_string block_=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
+                        <p class="h3" id="{{ block_ }}"></p>
+                        <script id="{{ script_id }}">let x{{ el_ }}='{{ vars.weather.now_weather.weather.0.icon|get_weather_ico|safe|encode_eng }}';let x{{ el_2 }}='{{ vars.weather.now_weather.weather.0.description|capfirst|encode_eng }}';$("#{{ block_ }}").html(`${UpBDecode(x{{ el_ }})}&nbsp;${UpBDecode(x{{ el_2 }})}`);$("#{{ script_id }}").remove()</script>
+                        {% endwith %}
 
                         {% with script_id=64|get_random_string block_=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
                         <p>
