--- a/awse/templates/awse/load_blocks/calculator.html
+++ b/awse/templates/awse/load_blocks/calculator.html
@@ -5,13 +5,23 @@
             <label class="city">
                 {% with script_id=64|get_random_string block_=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
                 <i id="{{ block_ }}"></i>
-                <script id="{{ script_id }}">let x{{ el_ }}='{{ vars.c_input|encode_eng }}';let x{{ el_2 }}='{{ vars.c_result|encode_eng }}';$("#{{ block_ }}").html(`${UpBDecode(x{{ el_ }})}&nbsp;=&nbsp;<b style="text-decoration: underline;">${UpBDecode(x{{ el_2 }})}</b>`);$("#{{ script_id }}").remove()</script>
+                <script id="{{ script_id }}">
+                    let x{{ el_ }}='{{ vars.c_input|encode_eng }}';
+                    let x{{ el_2 }}='{{ vars.c_result|encode_eng }}';
+                    $("#{{ block_ }}").html(`${UpBDecode(x{{ el_ }})}&nbsp;=&nbsp;<b style="text-decoration: underline;">${UpBDecode(x{{ el_2 }})}</b>`);
+                    $("#{{ script_id }}").remove()
+                </script>
                 {% endwith %}
             </label>
             <br/>
             {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
             <div id="{{ badge_block }}" class="badge_block_info select_disable_text"></div>
-            <script id="{{ script_id }}">let x{{ title_badge }}="Calculator&nbsp;";let x{{ icon_badge }}="fas fa-calculator";$("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");$("#{{ script_id }}").remove()</script>
+            <script id="{{ script_id }}">
+                let x{{ title_badge }}="Calculator&nbsp;";
+                let x{{ icon_badge }}="fas fa-calculator";
+                $("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");
+                $("#{{ script_id }}").remove()
+            </script>
             {% endwith %}
         </div>
     </div>
