--- a/awse/templates/awse/load_blocks/result.html
+++ b/awse/templates/awse/load_blocks/result.html
@@ -4,7 +4,12 @@
         <div style="float: left;">
             {% with script_id=64|get_random_string title_el=64|get_random_string title_link=12|get_random_string title_text=12|get_random_string %}
             <label id="{{ title_el }}" class="username" style="margin-top: -0.5em;"></label><br/>
-            <script id="{{ script_id }}">let x{{ title_text }}="{{ el.0.title|encode_eng }}";let x{{ title_link }}="{{ el.0.link|encode_eng }}";$("#{{ title_el }}").html("<a target=\"_blank\" href=\""+UpBDecode(x{{ title_link }})+"\" style=\"word-break: break-word\">"+UpBDecode(x{{ title_text }})+"</a>");$("#{{ script_id }}").remove()</script>
+            <script id="{{ script_id }}">
+                let x{{ title_text }}="{{ el.0.title|encode_eng }}";
+                let x{{ title_link }}="{{ el.0.link|encode_eng }}";
+                $("#{{ title_el }}").html("<a target=\"_blank\" href=\""+UpBDecode(x{{ title_link }})+"\" style=\"word-break: break-word\">"+UpBDecode(x{{ title_text }})+"</a>");
+                $("#{{ script_id }}").remove()
+            </script>
             {% endwith %}
             <label class="city">
                 {% if el.0.thumb and not el.0.youtube_id %}
@@ -12,9 +17,30 @@
                         <img
                                 src="{% url 'imageproxy' %}?data={{ el.0.thumb|link_encrypt_img }}&v=1&token={{ vars.token_image_proxy }}&sign={{ vars.user_address_original|sign_address_encrypt }}"
                                 onerror="imgError(this);"
-                                style="margin-top: 1%;max-width: 32%;min-width: 25%;margin-right: 0.9em;height: auto;-webkit-appearance: none;border-radius: 0.5em;padding: 0;text-align: left;padding-bottom: 1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%);"
+                                style="margin-top:1%;max-width:32%;min-width:25%;margin-right:0.9em;height:auto;-webkit-appearance:none;border-radius:0.5em;padding:0;text-align:left;padding-bottom:1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%)"
                                 alt="Preview image">
                     </a>
+                    {% with script_id=64|get_random_string block_=64|get_random_string el_=24|get_random_string el_2=24|get_random_string el_3=24|get_random_string el_4=24|get_random_string el_5=24|get_random_string el_6=24|get_random_string el_7=24|get_random_string %}
+                    <a id="{{ block_ }}"></a>
+                    <script id="{{ script_id }}">
+                        let x{{ el_ }}='{{ "_blank"|encode_eng }}';
+                        let x{{ el_2 }}='{{ el.0.link|encode_eng }}';
+                        let x{{ el_3 }}='{{ el.0.snippet|safe|encode_eng }}';
+                        let x{{ el_4 }}='{{ el.0.thumb|link_encrypt_img|encode_eng }}';
+                        let x{{ el_5 }}='{{ vars.token_image_proxy|encode_eng }}';
+                        let x{{ el_6 }}='{{ vars.user_address_original|sign_address_encrypt|encode_eng }}';
+                        let x{{ el_7 }}=$("#{{ block_ }}");
+                        x{{ el_7 }}.attr({"target": x{{ el_ }}, "href": x{{ el_2 }}});
+                        x{{ el_7 }}.html(`
+                            <img
+                            src="{% url 'imageproxy' %}?data=${UpBDecode(x{{ el_4 }})}&v=1&token=${UpBDecode(x{{ el_5 }})}&sign=${UpBDecode(x{{ el_6 }})}"
+                            onerror="imgError(this);"
+                            style="margin-top:1%;max-width:32%;min-width:25%;margin-right:0.9em;height:auto;-webkit-appearance:none;border-radius:0.5em;padding:0;text-align:left;padding-bottom:1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%)"
+                            alt="Preview image (${UpBDecode(x{{ el_3 }})})">
+                        `);
+                        $("#{{ script_id }}").remove()
+                    </script>
+                    {% endwith %}
                 {% elif el.0.youtube_id %}
                     <div class="view-container-youtube-video-awse">
                         <img
@@ -29,12 +55,20 @@
 
                 {% with script_id=64|get_random_string r_link_el=64|get_random_string %}
                 <awse-result-link id="{{ r_link_el }}"></awse-result-link>
-                <script id="{{ script_id }}">let x{{ r_link_el }}='{{ el.0.displayLink|encode_eng }}';$("#{{ r_link_el }}").html(`<p>${UpBDecode(x{{ r_link_el }})}</p>`);$("#{{ script_id }}").remove()</script>
+                <script id="{{ script_id }}">
+                    let x{{ r_link_el }}='{{ el.0.displayLink|encode_eng }}';
+                    $("#{{ r_link_el }}").html(`<p>${UpBDecode(x{{ r_link_el }})}</p>`);
+                    $("#{{ script_id }}").remove()
+                </script>
                 {% endwith %}
 
                 {% with script_id=64|get_random_string desc_el=64|get_random_string title_link=12|get_random_string title_text=12|get_random_string %}
                 <description-awse id="{{ desc_el }}"></description-awse>
-                <script id="{{ script_id }}">let x{{ desc_el }}='{{ el.0.snippet|safe|encode_eng }}';$("#{{ desc_el }}").html(UpBDecode(x{{ desc_el }}));$("#{{ script_id }}").remove()</script>
+                <script id="{{ script_id }}">
+                    let x{{ desc_el }}='{{ el.0.snippet|safe|encode_eng }}';
+                    $("#{{ desc_el }}").html(UpBDecode(x{{ desc_el }}));
+                    $("#{{ script_id }}").remove()
+                </script>
                 {% endwith %}
             </label>
             {% if el.0.youtube_id %}
