--- a/awse/templates/awse/load_blocks/quotes.html
+++ b/awse/templates/awse/load_blocks/quotes.html
@@ -5,13 +5,23 @@
             <label class="city">
                 {% with script_id=64|get_random_string block_=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
                 <aware-quote id="block_"></aware-quote>
-                <script id="{{ script_id }}">let x{{ el_ }}='{{ quote.q|encode_eng }}';let x{{ el_2 }}='{{ quote.a|encode_eng }}';$("#{{ block_ }}").html(`<i>„${UpBDecode(x{{ el_ }})}“</i><br/><br/><b>${UpBDecode(x{{ el_2 }})}</b>`);$("#{{ script_id }}").remove()</script>
+                <script id="{{ script_id }}">
+                    let x{{ el_ }}='{{ quote.q|encode_eng }}';
+                    let x{{ el_2 }}='{{ quote.a|encode_eng }}';
+                    $("#{{ block_ }}").html(`<i>„${UpBDecode(x{{ el_ }})}“</i><br/><br/><b>${UpBDecode(x{{ el_2 }})}</b>`);
+                    $("#{{ script_id }}").remove()
+                </script>
                 {% endwith %}
             </label>
             <br/>
             {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
             <div id="{{ badge_block }}" class="badge_block_info select_disable_text"></div>
-            <script id="{{ script_id }}">let x{{ title_badge }}="Quote&nbsp;";let x{{ icon_badge }}="fas fa-quote-right";$("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");$("#{{ script_id }}").remove()</script>
+            <script id="{{ script_id }}">
+                let x{{ title_badge }}="Quote&nbsp;";
+                let x{{ icon_badge }}="fas fa-quote-right";
+                $("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");
+                $("#{{ script_id }}").remove()
+            </script>
             {% endwith %}
         </div>
     </div>
