--- a/awse/templates/awse/home/search_container.html
+++ b/awse/templates/awse/home/search_container.html
@@ -11,8 +11,8 @@
                 <i class="fas fa-search icon_search_load_awse_one" style="visibility: hidden;" title="Search"></i>
             </div>
             <div class="clear_awse_search_string"
-                 style="visibility: hidden;transition: margin-right 0.6s;margin-right: 2.3em;top: 0.8em;position: absolute;right: 0px;text-align: center;line-height: 55px;font-size: 20px;color: #202124;cursor: pointer;">
-                <i class="fas fa-times" style="color: #000000ad;" title="Clear string"></i>
+                 style="visibility:hidden;transition: margin-right 0.6s;margin-right:2.3em;top:0.8em;position:absolute;right:0px;text-align:center;line-height:55px;font-size:20px;cursor:pointer">
+                <i class="fas fa-times search-input-clear-button_" title="Clear string"></i>
             </div>
         </div>
     </div>
