--- a/awse/templates/awse/base.html
+++ b/awse/templates/awse/base.html
@@ -21,7 +21,7 @@
     <header class="site-header sticky-top py-1">
       <nav class="container d-flex flex-column flex-md-row justify-content-between">
         <a class="py-2" href="#" aria-label="Product">
-          <p style="color:#fff">AWSE</p>
+          <p style="color:#fff"></p>
         </a>
       </nav>
     </header>
