--- a/awse/templates/awse/global/header.html
+++ b/awse/templates/awse/global/header.html
@@ -2,7 +2,37 @@
 <header class="site-header sticky-top py-1">
   <nav class="container d-flex flex-column flex-md-row justify-content-between">
     <a class="py-2" href="#" aria-label="AWSE.US">
-      {# Waiting logo #}
+      <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+       width="961.000000pt" height="778.000000pt" viewBox="0 0 961.000000 778.000000"
+       preserveAspectRatio="xMidYMid meet"
+       style="width:24px;height:24px">
+      <metadata>
+      Logo by Ts'omyk Sasha
+      </metadata>
+      <g transform="translate(0.000000,778.000000) scale(0.100000,-0.100000)"
+      fill="#000000" stroke="none">
+      <path d="M6032 6158 c-7 -7 -12 -21 -12 -32 0 -18 37 -146 85 -293 13 -40 11
+      -50 -56 -290 -38 -136 -69 -254 -69 -260 0 -10 47 -13 201 -13 187 0 201 1
+      196 18 -53 190 -264 852 -275 865 -17 20 -53 22 -70 5z"/>
+      <path d="M4777 6108 c-20 -19 -68 -157 -246 -709 -121 -377 -221 -694 -221
+      -705 0 -43 53 -60 82 -26 9 9 33 72 54 140 21 71 41 118 45 110 4 -7 17 -49
+      28 -93 12 -44 29 -104 37 -132 l15 -53 250 0 c234 0 250 1 245 18 -10 32 -288
+      1037 -298 1077 -9 35 -5 56 37 183 25 78 45 152 43 164 -2 11 -13 27 -24 35
+      -20 13 -24 12 -47 -9z"/>
+      <path d="M5801 4643 c-62 -225 -123 -443 -134 -485 -12 -43 -24 -78 -27 -78
+      -3 0 -49 155 -101 345 -51 190 -98 345 -104 345 -5 0 -53 -155 -104 -345 -52
+      -190 -97 -345 -101 -345 -3 0 -28 82 -55 183 l-50 182 -252 3 -252 2 9 -27 c5
+      -16 68 -244 141 -508 72 -264 134 -486 138 -492 4 -8 48 51 113 150 59 89 162
+      246 230 350 l123 187 66 0 66 0 43 -67 c24 -38 96 -149 161 -248 65 -99 147
+      -224 182 -279 35 -54 67 -94 70 -90 3 5 96 340 207 744 111 404 205 738 209
+      742 4 5 24 -49 46 -120 41 -136 65 -176 99 -166 49 15 47 32 -18 244 l-54 175
+      -269 3 -270 2 -112 -407z"/>
+      <path d="M5375 3817 c-155 -239 -190 -293 -294 -455 l-111 -173 130 -471 c72
+      -260 132 -473 133 -474 1 -2 47 166 102 371 54 206 100 374 101 372 1 -1 34
+      -126 74 -277 77 -294 128 -479 129 -469 1 4 60 219 131 479 l131 472 -134 212
+      c-237 374 -322 506 -327 506 -3 0 -32 -42 -65 -93z"/>
+      </g>
+      </svg>
     </a>
   </nav>
 </header>
