--- a/awse/templates/awse/global/header.html
+++ b/awse/templates/awse/global/header.html
@@ -5,7 +5,7 @@
       <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
        width="961.000000pt" height="778.000000pt" viewBox="0 0 961.000000 778.000000"
        preserveAspectRatio="xMidYMid meet"
-       style="width:24px;height:24px">
+       style="width:75px;height:75px;position:absolute;top:-10px;filter:invert(100%)">
       <metadata>
       Logo by Ts'omyk Sasha
       </metadata>
