--- a/awse/templates/awse/global/header.html
+++ b/awse/templates/awse/global/header.html
@@ -1,7 +1,7 @@
 {% spaceless %}
 <header class="site-header sticky-top py-1">
   <nav class="container d-flex flex-column flex-md-row justify-content-between">
-    <a class="py-2" href="/" aria-label="AWSE.US">
+    <a class="py-2" href="/#logo" aria-label="AWSE.US">
       <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
        width="961.000000pt" height="778.000000pt" viewBox="0 0 961.000000 778.000000"
        preserveAspectRatio="xMidYMid meet"
