--- a/awse/templates/awse/global/head_links.html
+++ b/awse/templates/awse/global/head_links.html
@@ -5,8 +5,8 @@
 
 <link rel="stylesheet" href="{% static 'awse/bootstrap/css/bootstrap.min.css' %}" crossorigin="anonymous"/>
 <link rel="stylesheet" href="{% static 'awse/fontawesome/css/all.min.css' %}" crossorigin="anonymous"/>
-<link rel="shortcut icon" type="image/x-icon" href="{% static 'awse/images/favicon.ico' %}"/>
-<link rel="icon" type="image/x-icon" href="{% static 'awse/images/favicon.ico' %}"/>
+<link rel="apple-touch-icon" href="{% static 'awse/images/favicon.png' %}"/>
+<link rel="icon" type="image/png" href="{% static 'awse/images/favicon.png' %}" />
 <link rel="stylesheet" href="{% static 'awse/css/aos.min.css' %}" crossorigin="anonymous"/>
 <link rel="stylesheet" href="{% static 'awse/css/tiny-slider.min.css' %}" crossorigin="anonymous"/>
 <link href="{% static 'awse/css/main_page.min.css' %}" rel="stylesheet" crossorigin="anonymous"/>
