--- a/awse/templates/awse/global/header.html
+++ b/awse/templates/awse/global/header.html
@@ -1,4 +1,5 @@
 {% spaceless %}
+<div class="wrapper_gradient" style="height:48px"></div>
 <header class="site-header sticky-top py-1">
   <nav class="container d-flex flex-column flex-md-row justify-content-between">
     <a class="py-2" href="/#logo" aria-label="AWSE.US">
