--- a/awse/templates/awse/home/search_els.html
+++ b/awse/templates/awse/home/search_els.html
@@ -1,10 +1,10 @@
 {% spaceless %}
-<div style="margin: auto;">
+<div style="margin:auto">
     <p class="no-more-results-text"
-       style="color: #828282;transition: margin-bottom 1s;font-size: 14px;visibility: hidden;text-align: center;">No
+       style="color:#828282;transition: margin-bottom 1s;font-size:14px;visibility:hidden;text-align:center">No
         more results</p>
 </div>
-<button style="margin:0 auto;display:block;background-color:#121213;visibility: hidden;margin-bottom: 5%;"
+<button style="margin:0 auto;display:block;visibility:hidden;margin-bottom:5%"
         class="btn btn-dark load-more-end-butt-search-array">Load more<span style="margin-left:5px;vertical-align:-3px"
             class="spinner-border spinner-border-sm"
             aria-hidden="true"></span></button>
