--- a/awse/templates/awse/load_blocks/quotes.html
+++ b/awse/templates/awse/load_blocks/quotes.html
@@ -4,10 +4,10 @@
         <div style="float: left;">
             <label class="city">
                 {% with script_id=64|get_random_string block_=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
-                <aware-quote id="block_"></aware-quote>
+                <aware-quote id="{{ block_ }}"></aware-quote>
                 <script id="{{ script_id }}">
-                    let x{{ el_ }}='{{ quote.q|encode_eng }}';
-                    let x{{ el_2 }}='{{ quote.a|encode_eng }}';
+                    let x{{ el_ }}='{{ vars.quote.q|encode_eng }}';
+                    let x{{ el_2 }}='{{ vars.quote.a|encode_eng }}';
                     $("#{{ block_ }}").html(`<i>„${UpBDecode(x{{ el_ }})}“</i><br/><br/><b>${UpBDecode(x{{ el_2 }})}</b>`);
                     $("#{{ script_id }}").remove()
                 </script>
