--- a/awse/templates/awse/load_blocks/namaz.html
+++ b/awse/templates/awse/load_blocks/namaz.html
@@ -2,7 +2,7 @@
 <div class="col-12 col-lg-12 padding-block-center-box">
     <div class="user box aos-init aos-animate" data-aos="fade-up">
         <div style="float: left;">
-            <label class="username">Muslim prayers for {{ el.time }}, {{ el.hijri_day }} {{ el.hijri_month }} {{ el.hijri_year }}</label><br>
+            <label class="username">Muslim prayers for {{ el.time }} or hijri date stamp {{ el.hijri }}</label><br>
             <label class="city">
                 <p>
                     <br/>
