--- a/awse/templates/awse/base.html
+++ b/awse/templates/awse/base.html
@@ -30,7 +30,7 @@
                     {% block content %}{% endblock %}
                     <br/>
 
-                <div class="footer-awse" style="margin: auto;"></div>
+                <div class="footer-awse" style="margin:auto;padding-left:10px"></div>
             </div>
 
             <br/><br/><br/>
