--- a/awse/templates/awse/load_blocks/wiki.html
+++ b/awse/templates/awse/load_blocks/wiki.html
@@ -3,12 +3,11 @@
     <div class="user box aos-init aos-animate" data-aos="fade-up">
         <div style="float: left;">
             <label class="city">
-                {% with script_id=64|get_random_string block_=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
-                <aware-quote id="{{ block_ }}"></aware-quote>
+                {% with script_id=64|get_random_string block_=64|get_random_string el_=24|get_random_string %}
+                <aware-wiki id="{{ block_ }}"></aware-wiki>
                 <script id="{{ script_id }}">
-                    let x{{ el_ }}='{{ vars.q_data.q|encode_eng }}';
-                    let x{{ el_2 }}='{{ vars.q_data.a|encode_eng }}';
-                    $("#{{ block_ }}").html(`<i>„${UpBDecode(x{{ el_ }})}“</i><br/><br/><b>${UpBDecode(x{{ el_2 }})}</b>`);
+                    let x{{ el_ }}='{{ vars.q_data.text|encode_eng }}';
+                    $("#{{ block_ }}").html(`<i>${UpBDecode(x{{ el_ }})}...</i>`);
                     $("#{{ script_id }}").remove()
                 </script>
                 {% endwith %}
@@ -17,8 +16,8 @@
             {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
             <div id="{{ badge_block }}" class="badge_block_info select_disable_text"></div>
             <script id="{{ script_id }}">
-                let x{{ title_badge }}="Quote&nbsp;";
-                let x{{ icon_badge }}="fas fa-quote-right";
+                let x{{ title_badge }}="Wiki&nbsp;";
+                let x{{ icon_badge }}="fab fa-wikipedia-w";
                 $("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");
                 $("#{{ script_id }}").remove()
             </script>
